fix: resolve otherprojects text overflow

--- a/src/components/OtherProjects/OtherProjects.module.css
+++ b/src/components/OtherProjects/OtherProjects.module.css
@@ -1,5 +1,5 @@
 .others {
-  height: 300px;
+  height: fit-content;
   padding: 1rem;
   display: flex;
   flex-direction: column;
@@ -37,9 +37,6 @@
 }
 
 @media screen and (max-width: 768px) {
-  .others {
-    height: fit-content;
-  }
   .others > article > ul {
     font-size: 0.8rem;
   }
